[package]
name = "terra_store"
version = "3.0.0"
edition = "2021"
authors = ["TerraFlow"]
description = "A native TUI package manager for Arch Linux"
license = "MIT"
repository = "https://github.com/manu2407/TerraFlow-Dotfiles"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Fuzzy Finder
skim = "0.10"

# Secure Password Input
rpassword = "7.3"

# Serialization (for history/config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Directory paths
dirs = "6.0"

# Error handling
thiserror = "2.0"

# XML parsing for Flatpak AppStream
quick-xml = "0.37"
flate2 = "1.0"

# Async runtime (optional, for future enhancements)
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
strip = true
